fix chrome perf issue with overflow-x set (?)

--- a/framework/servlet/src/cc/alcina/framework/servlet/component/traversal/res/css/styles.css
+++ b/framework/servlet/src/cc/alcina/framework/servlet/component/traversal/res/css/styles.css
@@ -868,7 +868,6 @@ body > page > selections > selection[selected] {
 body > page > selections > selection-table {
   display: block;
   width: 100%;
-  overflow-x: scroll;
 }
 body > page > selections > selection-table > table {
   border-spacing: 0;
